--- a/package.json
+++ b/package.json
@@ -14,15 +14,27 @@
   },
   "homepage": "https://github.com/GitHubGW/MyYoutube#readme",
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
+    "autoprefixer": "^10.2.5",
+    "babel-loader": "^8.2.2",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.5",
+    "cross-env": "^7.0.3",
+    "css-loader": "^5.2.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
     "helmet": "^4.4.1",
+    "mini-css-extract-plugin": "^1.4.0",
     "mongoose": "^5.12.2",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
-    "pug": "^3.0.2"
+    "node-sass": "^5.0.0",
+    "postcss-loader": "^5.2.0",
+    "pug": "^3.0.2",
+    "sass-loader": "^11.0.1",
+    "webpack": "^5.30.0",
+    "webpack-cli": "^4.6.0"
   },
   "devDependencies": {
     "@babel/core": "^7.13.10",
@@ -37,6 +49,8 @@
     "prettier": "^2.2.1"
   },
   "scripts": {
-    "start": "nodemon --exec babel-node init.js --delay 2"
+    "dev:server": "nodemon --exec babel-node init.js --delay 2",
+    "dev:assets": "cross-env WEBPACK_ENV=development webpack -w",
+    "build:assets": "cross-env WEBPACK_ENV=production webpack"
   }
 }
