--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
     "body-parser": "^1.19.0",
+    "connect-mongo": "^4.4.1",
     "cookie-parser": "^1.4.5",
     "cross-env": "^7.0.3",
     "css-loader": "^5.2.0",
@@ -32,6 +33,7 @@
     "multer": "^1.4.2",
     "node-sass": "^5.0.0",
     "passport": "^0.4.1",
+    "passport-github": "^1.1.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0",
     "postcss-loader": "^5.2.0",
